--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,19 +2,28 @@
 <html>
 
   {% include head.html %}
-
-
     <body id="page-top" class="index">
 
     {% include header.html %}
-    {% include services.html %}
-    {% include portfolio_grid.html %}
-    {% include about.html %}
-    {% include team.html %}
-    {% include clients.html %}
-    {% include contact.html %}
-    {% include footer.html %}
-    {% include modals.html %}
+    
+    {% for menuitem in site.menuitems %}
+      {% include {{ menuitem.include }}.html %}
+    {% endfor %}
+
+    {% comment %}
+    
+    {% include contracts.html %}
+
+    
+    <!-- {% include services.html %} -->
+    <!-- {% include portfolio_grid.html %} -->
+    <!-- {% include about.html %} -->
+    <!-- {% include team.html %} -->
+    <!-- {% include clients.html %}  -->
+    <!-- {% include contact.html %} -->
+    <!-- {% include footer.html %} -->
+    <!-- {% include modals.html %} -->
+    {% endcomment %}
     {% include js.html %}
 
     </body>
