1: Disabled unused stuff

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,7 +38,7 @@
                     {% include logo.html %}
                     <br/>
                     <br/>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <!-- <a href="#services" class="page-scroll btn btn-xl">Berätta mer</a> -->
             </div>
         </div>
     </header>
