--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,8 +3,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Tjänster</h2>
+                </br>
+                    <!-- <h3 class="section-subheading text-muted">Micael Carlstedt Consulting erbjuder följande tjänter</h3> -->
                 </div>
             </div>
             <div class="row text-center">
