2: Added a page scroller to the services

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,12 +33,19 @@
     </nav>
     <!-- Header -->
     <header>
-            <div class="container">
+        <div class="container">
             <div class="intro-text">
-                    {% include logo.html %}
-                    <br/>
-                    <br/>
-                <!-- <a href="#services" class="page-scroll btn btn-xl">Berätta mer</a> -->
+                {% include logo.html %}
+            </br>
+            </br>
+            </br>
+            </br>
+            <a href="#services" class="page-scroll">
+                <span class="fa-stack fa-2x">
+                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-angle-double-down fa-stack-1x fa-inverse"></i>
+                </span>
+            </a>
             </div>
         </div>
     </header>
