--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -290,8 +290,8 @@ a:hover #customersCircle {
 header {
     text-align: center;
     color: #fff;
-    background-attachment: scroll;
-    /* background-image: url('{{ site.baseurl }}/img/header-bg.jpg'); */
+    background-attachment: fixed;
+    /* background-image: url('{{ site.baseurl }}/img/logo.svg'); */
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
