--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Tjänster</h2>
-                </br>
+                    </br>
                     <!-- <h3 class="section-subheading text-muted">Micael Carlstedt Consulting erbjuder följande tjänter</h3> -->
                 </div>
             </div>
@@ -13,7 +13,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa {{service.font-awesome}} fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">{{service.title}}</h4>
                     <p class="text-muted">{{service.description}}</p>
