--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,8 +35,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                {% include logo.html %}
-            </br>
+                 {% include logo.svg %}
             </br>
             </br>
             </br>
