--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,20 +1,25 @@
 <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
+    <!-- <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container"> -->
                 
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
+            <!-- <div class="navbar-header">
+                    <a class="navbar-brand page-scroll" href="#page-top">
+                        <div class="nav">
+                            {% include logo.svg %}
+                        </div>
+                    </a>
+
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">{{site.title}}</a>
-            </div>
+            </div> -->
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="#page-top"></a>
@@ -25,12 +30,12 @@
                     </li>
                     {% endfor %}
                 </ul>
-            </div>
+            </div> -->
             <!-- /.navbar-collapse -->
-        </div>
+        <!-- </div> -->
         <!-- /.container-fluid -->
 
-    </nav>
+    <!-- </nav> -->
     <!-- Header -->
     <header>
         <div class="container">
