2: Improved the description of the services

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -5,7 +5,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Tjänster</h2>
                     </br>
-                    <h3 class="section-subheading text-muted">Micael Carlstedt Consulting tillhandahåller tjänter inom digitalisering och systemutveckling.</h3>
+                    <h3 class="section-subheading text-muted">Micael Carlstedt Consulting tillhandahåller tjänter inom systemutveckling, automatisering, coaching och processförbättringar.</h3>
                 </div>
             </div>
             <div class="row text-center">
