--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,15 +41,19 @@
         <div class="container">
             <div class="intro-text">
                  {% include logo.svg %}
-            </br>
-            </br>
-            </br>
-            <a href="#services" class="page-scroll">
-                <span class="fa-stack fa-2x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-angle-double-down fa-stack-1x fa-inverse"></i>
-                </span>
-            </a>
+                </br>
+                <!-- <a href="mailto:{{ site.email | encode_email }}" title="Email us">micael@carlstedt.com</a>
+                <a href="tel:{{ site.phone | encode_email }}" title="Email us">+46722009494</a>
+            
+                </br> -->
+                </br>    
+                </br>
+                <a href="#services" class="page-scroll">
+                    <span class="fa-stack fa-2x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-angle-double-down fa-stack-1x fa-inverse"></i>
+                    </span>
+                </a>
             </div>
         </div>
     </header>
