--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,21 +39,32 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <div class="intro-text">
-                 {% include logo.svg %}
-                </br>
-                <!-- <a href="mailto:{{ site.email | encode_email }}" title="Email us">micael@carlstedt.com</a>
-                <a href="tel:{{ site.phone | encode_email }}" title="Email us">+46722009494</a>
-            
-                </br> -->
-                </br>    
-                </br>
-                <a href="#services" class="page-scroll">
-                    <span class="fa-stack fa-2x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-angle-double-down fa-stack-1x fa-inverse"></i>
-                    </span>
-                </a>
+            <div class="logo">
+                <div> 
+                    {% include logo.svg %}
+                </div>
+                <div class="contact" >
+                    <a href="mailto:{{ site.email | encode_email }}" title="Skicka Micael ett email">
+                            <span class="fa-stack fa-3x">
+                                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                                <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+                            </span>
+                    </a>
+                    <a href="tel:{{ site.phone | encode_email}}" title="Ring Micael">
+                            <span class="fa-stack fa-3x">
+                                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                                <i class="fa fa-phone fa-stack-1x fa-inverse"></i>
+                            </span>
+                    </a>
+                </div>
+                <div class="navbutton">
+                    <a href="#services" class="page-scroll">
+                        <span class="fa-stack fa-2x">
+                            <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fa fa-angle-double-down fa-stack-1x fa-inverse"></i>
+                        </span>
+                    </a>
+                </div>
             </div>
         </div>
     </header>
